# data-to-paper

./: .dockerignore  .flake8  .gitignore  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  README.md  app.py  conversation.py  kuk.py  main.py  pyproject.toml  release.py  requirements.txt  scientist_gpt.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_suggestion.yml  general_question.yml
.github/workflows/: ci.yml
Docker/: DockerFile  DockerFile-local  docker-compose.yml
app_modules/: presets.py
chatgpt_created_scripts/: __init__.py
covid_vaccine_analysis/: create_covid_vaccine_analysis_paper.py  data_description.txt  queries_covid_vaccine.py
covid_vaccine_analysis/out1/: crossref_responses.txt  openai_responses.txt
data-to-paper/: pyproject.toml
data_to_paper/: pyproject.toml  setup.py
data_to_paper/data_to_paper/: __init__.py  env.py  exceptions.py  types.py
data_to_paper/examples/: run_project.py
data_to_paper_examples/demo_project/: cast.py  coding_steps.py  produce_pdf_step.py  products.py  run_steps.py  stage.py  writing_steps.py
data_to_paper_examples/examples/: run_project.py
data_to_paper_examples/scientific_research/: produce_pdf_step.py  scientific_stage.py
data_to_paper_new/: test.py
data_to_paper_new/chatgpt_client/: chatgpt_models.py  config.py  gpt_client.py
data_to_paper_new/conversation/: conversation.py  message.py
data_to_paper_new/converser/: converser.py
data_to_paper_new/roles/: base_role.py  scientist.py
data_to_paper_package/: setup.py
data_to_paper_package/data_to_paper/: env.py
data_to_paper_server/: app.py  setup.py
data_to_paper_server/data_to_paper_server/: app.py  consts.py  runner.py  serializers.py  websocket_messenger.py
data_to_paper_server/diabetes/: run_project.py
examples/: run_project.py
examples/covid_vaccine_analysis/: create_covid_vaccine_analysis_paper.py  data_description.txt  queries_covid_vaccine.py
examples/icd_analysis/: create_icd_analysis_paper.py  paths.py  view_saved_conversation.py
examples/projects/: __init__.py  covid.py  diabetes.py  icd.py
g3pt/: __init__.py  call_servers.py  env.py  exceptions.py
g3pt/base_cast/: cast.py
g3pt/base_steps/: __init__.py  assemble_to_file.py  base_latex_to_pdf.py  base_products_conversers.py  base_response_extractors.py  base_runner.py  base_steps_runner.py  converser_gpt.py  debugger_gpt.py  director_converser.py  dual_converser.py  request_code.py  request_latex.py  request_products_from_user.py  request_quoted_test.py  types.py  write_code.py
g3pt/cast/: cast.py  messenger.py  on_action.py  types.py
g3pt/conversation/: __init__.py  actions.py  converation_manager.py  conversation.py  message.py  message_designation.py  replay.py
g3pt/gpt_interactors/: README.md  base_products_conversers.py  converser_gpt.py  debugger_gpt.py  director_converser.py  dual_converser.py  types.py  write_code.py
g3pt/latex/: latex_extractor.py  latex_section_tags.py  latex_to_pdf.py
g3pt/run_gpt_code/: code_runner.py  dynamic_code.py
g3pt/servers/: chatgpt.py  crossref.py  openai_models.py
g3pt/user_utils/: __init__.py  inspect.py
g3pt/utils/: extract_python.py  file_utils.py  replacer.py  revise_text.py  tag_pairs.py  text_utils.py
icd_analysis/: create_icd_analysis_paper.py  gpt_code_attempt0_2.txt  queries.py  queries_mimic.py  view_saved_conversation.py
images/: logo.pptx
projects/COVID_CH/: DataDescription  Symptoms.csv  TimeToInfection.csv
projects/ML/: README.md
projects/P_5518/: L18-02b - data dictionary.xlsx  LY18-02b.sas7bdat  data.csv  datadescription
projects/Riedell/: data-to-paper-hypothesis-testing.json  data.csv.description.txt  general_description.txt
projects/demo/: data-to-paper.json
projects/diabetes/: README.md
projects/nrp_nicu/: README.md
projects/social/: README.md
scientistgpt/: __init__.py  call_servers.py  code_runner.py  conversation.py  decorators.py  dynamic_code.py  env.py  exceptions.py  proceed_retract.py  setup.py  utils.py
scientistgpt/cast/: __init__.py  cast.py  messenger.py  on_action.py  types.py
scientistgpt/conversation/: __init__.py  actions.py  actions_and_conversations.py  converation_manager.py  conversation.py  message.py  message_designation.py  replay.py
scientistgpt/examples/: local_paths.py  run_project.py
scientistgpt/gpt_interactors/: cast.py  citations_gpt.py  converser_gpt.py  debugger_gpt.py  dual_converser.py  paper_writting_gpt.py  plan_reviewer_gpt.py  proceed_retract.py  reviewer_gpt.py  scientific_products.py  scientist_gpt.py  text_extractors.py  types.py
scientistgpt/latex/: __init__.py  create_latex_paper.py  latex_extractor.py  latex_section_tags.py  latex_to_pdf.py
scientistgpt/run_gpt_code/: __init__.py  code_runner.py  dynamic_code.py  exceptions.py  fake_functions.py  run_context.py  runtime_decorators.py
scientistgpt/scientistgpt/: __init__.py  data_file_description.py  env.py
scientistgpt/utils/: __init__.py  (+5 more)
scientistgpt_project/: manage.py
scientistgtp/: __init__.py  code_runner.py  conversation.py  env.py  exceptions.py  proceed_retract.py  run_code.py  scientist_gpt.py  setup.py  utils.py
tests/: conftest.py  utils.py
(+2706 files in other folders)
