[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_to_paper"
version = "1.1.2"
description = "data-to-paper: Backward-traceable AI-driven scientific research"
authors = [
    { name = "Kishony lab, Technion Israel Institute of Technology" },
    { name = "Roy Kishony", email = "rkishony@technion.ac.il" },
    { name = "Tal Ifargan", email = "talifargan@campus.technion.ac.il" },
    { name = "Lukas Hafner", email = "lukashafner@campus.technion.ac.il" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["data-to-paper", "research", "AI-driven-research", "backward-traceable", "ai", "agents",
    "autonomous-agents", "scientific-research", "interactive-machine-learning", "llm"]
classifiers = [
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Visualization',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Operating System :: OS Independent',
]
dependencies = [
    "colorama==0.4.6",
    "openai==0.27.8",
    "regex==2023.6.3",
    "tiktoken==0.4.0",
    "pygments~=2.15.1",
    "requests~=2.31.0",
    "unidecode~=1.3.6",
    "PyMuPDF~=1.23.20",
    "py-spy~=0.3.14",
    "ansi2html~=1.8.0",
    "PySide6==6.5.2",
    "pytest~=7.4.0",
    "numpy~=1.25.1",
    "pandas==2.0.3",
    "Jinja2~=3.1.4",
    "statsmodels~=0.14.0",
    "scipy~=1.11.1",
    "scikit-learn~=1.3.0",
    "networkx~=3.2.1",
    "matplotlib~=3.9.0"
]
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/Technion-Kishony-lab/data-to-paper"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-pep8",
    "pytest-cov",
    "pytest-benchmark",
]

[project.gui-scripts]
data-to-paper = "data_to_paper.scripts.run:run"

[project.scripts]
data-to-paper-chkres = "data_to_paper.scripts.check_resources:check_resources"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
