[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_to_paper"
version = "0.1.0"
description = "data-to-paper"
authors = [
    { name = "Kishony lab, Technion Israel Institute of Technology", email = "rkishony@technion.ac.il" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    'Framework :: Jupyter',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Visualization',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Operating System :: OS Independent',
]
dependencies = [
    "colorama",
    "openai",
    "regex",
    "tiktoken",
    "pygments",
    "requests",
    "unidecode",
    "PyMuPDF",
    "py-spy",
    "ansi2html",
    "PySide6",
    "numpy",
    "pandas",
    "statsmodels",
    "scipy",
    "scikit-learn",
    "networkx",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-pep8",
    "pytest-cov",
    "pytest-benchmark",
]

[tool.setuptools]
py-modules = ["data_to_paper"]
